# cpptorch

./: .gitignore  CMakeLists.txt
experiments/: debug.json
scripts/: create_script_model.py  export_onnx.py  onnx2vino_example.sh  script_model.py  simple_model.py  update_model_weights.py  yolov3_model.py  yolov3_test.py
src/: argman.cpp  argman.hpp  creator.hpp  ctimer.hpp  data_loader.cpp  data_loader.hpp  main.cpp  model.cpp  model.hpp  types.hpp  utils.cpp  utils.hpp  weights.cpp  weights.hpp
src/data_loaders/: batch_loader.cpp  batch_loader.hpp  engfra_loader.cpp  language_loader.cpp  mnist_loader.cpp  mnist_loader.hpp  namelang_loader.cpp  yolo_loader.cpp
src/loss_functions/: basic_loss.hpp  classification_loss.cpp  yolo_loss.cpp
src/models/: basic_model.cpp  basic_model.hpp  jit_model.cpp  rnn_model.cpp
src/optimizers/: basic_optimizer.hpp  sgd_optimizer.cpp
