CMAKE_MINIMUM_REQUIRED(VERSION 3.0.0)
PROJECT(cpptorch VERSION 0.1.0)

SET(CMAKE_VERBOSE_MAKEFILE ON)
SET(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_CXX_STANDARD 17)
SET(CMAKE_CXX_EXTENSIONS OFF)

FIND_PACKAGE(CUDA REQUIRED)
FIND_PACKAGE(Boost REQUIRED COMPONENTS filesystem system regex)
FIND_PACKAGE(OpenMP REQUIRED)
FIND_PACKAGE(OpenCV REQUIRED core imgcodecs imgproc highgui flann)
FIND_PACKAGE(Torch REQUIRED PATHS "/opt/libtorch/share/cmake/Torch")

FILE(GLOB_RECURSE SRC_FILES "${CMAKE_SOURCE_DIR}/src/*.cpp")
ADD_EXECUTABLE(${PROJECT_NAME} ${SRC_FILES})
TARGET_COMPILE_OPTIONS(${PROJECT_NAME}
	PRIVATE ${TORCH_CXX_FLAGS}
	PRIVATE "-DC10_USE_GLOG"
	PRIVATE ${OpenMP_CXX_FLAGS}
	)
TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME}
	PRIVATE ${OpenCV_INCLUDE_DIRS}
	PRIVATE ${Boost_INCLUDE_DIRS}
	)
TARGET_LINK_OPTIONS(${PROJECT_NAME}
	PRIVATE ${OpenMP_EXE_LINKER_FLAGS}
	PRIVATE ${OpenMP_CXX_FLAGS}
)
TARGET_LINK_LIBRARIES(${PROJECT_NAME}
	PRIVATE ${TORCH_LIBRARIES}
	PRIVATE ${OpenCV_LIBRARIES}
	PRIVATE ${Boost_LIBRARIES}
	PRIVATE -lglog
	PRIVATE -ltbb
	PRIVATE -lstdc++fs
	)
